Fix error where Span contents wrapped when skinny

--- a/src/webapp/forecast/timeline/Span.css
+++ b/src/webapp/forecast/timeline/Span.css
@@ -81,6 +81,7 @@
   position: absolute;
   right: 0;
   top: 0;
+  white-space: nowrap;
 }
 
 .date-handle {
